# communitydocs-rag

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: demo_structured_output.py
src/communitydocs_rag/: config.py  logging_setup.py
src/communitydocs_rag/llm/: client.py  generate.py  schema.py
tests/: test_llm_schema_validation.py
